# libmpris

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  mpris.pc.in
include/: Makefile.am
include/libmpris/: Makefile.am
include/libmpris/mpris/: Makefile.am  connection.h  control.h  dbus.h  list.h  mpris-list.h  mpris.h  types.h
include/mpris/: Makefile.am  dbus.h  mpris.h  types.h
libmpris/: Makefile.am  connection.c  dbus.c  list.c  mpris.c
src/: .gitignore  Makefile.am  mpris-control.c  mpris-demo.c  mpris-demo.glade  mpris-list.c
